# -

./: Самат.py  зертханалық -5.py  зертханалық-2.py  зертханалық-4.py  зертханалық-6.py  Қызметкерлер.(samat)py
Балтаев Самат 10 лаб/: Балтаев Самат.md  СаматБ.py
Балтаев Самат зертханалық 11/: Балтаев Самат 11 зертханалық.txt
Проект(Online Courses Platform)(Courses,students,assignments,include testing.)/: Online courses platforma.py
зертханадық 9/: lAB9.py
зертханалық 12/: lab12.py
зертханалық 14/: README.md  pyproject.toml
зертханалық 14/auto_salon/: __init__.py  finance.py  inventory.py  personal.py
зертханалық 14/auto_salon.egg-info/: PKG-INFO  SOURCES.txt
зертханалық 14/auto_salon/utils/: __init__.py  display.py
зертханалық 15/: lab15.py
